# cis-194

./: README.md
homework1/: homework1.cabal
homework1/src/: Homework1.hs
homework1/tests/: test.hs
homework2/: homework2.cabal
homework2/src/: LogAnalysis.hs
homework2/tests/: Fixtures.hs  test.hs
homework3/: homework3.cabal
homework3/src/: Golf.hs
homework3/tests/: test.hs
homework4/: homework4.cabal
homework4/src/: Homework4.hs
homework4/tests/: test.hs
homework5/: homework5.cabal
homework5/src/: Calc.hs  Parser.hs
homework5/tests/: test.hs
homework6/: LICENSE  homework6.cabal
homework6/src/: Fibonacci.hs
homework6/tests/: test.hs
