name:                homework5
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Christian Wesselhoeft
maintainer:          hi@xtian.us
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Calc
                   , ExprT
                   , Parser
  build-depends:     base >=4.7 && <4.8
                   , containers
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite Tests
  hs-source-dirs:    tests
  main-is:           test.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  build-depends:     base >=4.6 && <5
                   , Cabal >= 1.16.0
                   , homework5
                   , containers
                   , HUnit
                   , tasty
                   , tasty-hunit
